# ormkit

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
benchmarks/: RESULTS.md  bench_json.py  bench_m2m.py  bench_soft_delete.py  bench_sqlite.py  bench_upsert.py  breakdown.py  compare_postgres.py  compare_raw.py  conftest.py  docker-compose.yml  micro_bench.py  results.json  run_all.py  runner.py
benchmarks/isolated/: __init__.py  aiosqlite_bench.py  asyncpg_bench.py  databases_bench.py  helpers.py  ormar_bench.py  ormkit_postgres.py  ormkit_sqlite.py  piccolo_bench.py  seed_postgres.py  sqlalchemy_bench.py  tortoise_bench.py
docs/: index.md
docs/api/: engine.md  index.md  models.md  query.md  session.md
docs/contributing/: architecture.md  development.md  index.md
docs/getting-started/: first-app.md  index.md  installation.md  quickstart.md
docs/guide/: index.md  models.md  queries.md  raw-sql.md  relationships.md  transactions.md
docs/includes/: abbreviations.md
docs/performance/: benchmarks.md  index.md  optimization.md
docs/stylesheets/: extra.css
python/ormkit/: __init__.py  _foreignkey.pyi  base.py  fields.py  mixins.py  query.py  relationships.py  session.py
python/ormkit/cli/: __init__.py
python/ormkit/migrations/: __init__.py  autogen.py  config.py  operations.py  runner.py  script.py
src/: error.rs  executor.rs  lib.rs  pool.rs  schema.rs
src/pg/: connection.rs  error.rs  mod.rs  pool.rs  protocol.rs  scram.rs  statement.rs  tests.rs  types.rs
src/sqlite/: connection.rs  error.rs  mod.rs  pool.rs  tests.rs  types.rs
tests/: conftest.py  test_json_fields.py  test_m2m.py  test_migrations.py  test_models.py  test_new_features.py  test_queries.py  test_relationships.py  test_session.py  test_session_fluent.py  test_soft_delete.py  test_upsert.py
