[package]
name = "ormkit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A blazingly fast Python ORM powered by Rust"

[lib]
name = "_ormkit"
crate-type = ["cdylib"]

[lints.rust]
# Allow dead code - we have public API methods not yet used internally
dead_code = "allow"

[lints.clippy]
# Allow same postfix on enum variants (e.g., ConnectionError, IoError)
enum_variant_names = "allow"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1.40", features = ["full"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pythonize = "0.23"
parking_lot = "0.12"
once_cell = "1.20"

# LRU cache for prepared statements (O(1) operations)
lru = "0.12"

# SmallVec for inline storage of small collections
smallvec = "1.13"

# Custom protocol drivers
bytes = "1.7"
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }
base64 = "0.22"
rand = "0.8"

# SQLite (minimal, no sqlx overhead)
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

[features]
default = []
postgres-integration-tests = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

# Optimize dependencies too
[profile.release.package."*"]
opt-level = 3
