[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ormkit"
version = "0.1.2"
description = "A blazingly fast Python ORM powered by Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Framework :: AsyncIO",
    "Topic :: Database",
    "Typing :: Typed",
]
keywords = ["orm", "database", "async", "postgresql", "sqlite", "rust"]

[project.scripts]
ormkit = "ormkit.cli:main"

[tool.maturin]
python-source = "python"
module-name = "ormkit._ormkit"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ty.environment]
# Type checking configuration (ty is ~100x faster than pyright)
python-version = "3.12"

[tool.ty.src]
include = ["python/ormkit", "tests"]

[tool.ty.rules]
# Ignore unresolved imports for the compiled Rust extension (_ormkit)
unresolved-import = "ignore"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) - necessary for ORM
    "ANN001",  # Missing type annotation for function argument - handled by pyright
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "N817",    # CamelCase imported as acronym - common pattern
    "SIM102",  # Nested if statements - sometimes clearer
    "SIM105",  # Use contextlib.suppress - not always clearer
    "SIM108",  # Use ternary operator - not always clearer
    "SIM118",  # Use key in dict - .keys() is sometimes clearer
    "UP037",   # Remove quotes from type annotation - needed for forward refs
    "UP046",   # Use type parameters - keeping Generic[T] for 3.12 compat
    "B007",    # Loop control variable not used - sometimes intentional
    "C401",    # Unnecessary generator - readability preference
    "E402",    # Module level import not at top - sometimes necessary
    "E501",    # Line too long - handled case by case
]

[tool.ruff.lint.per-file-ignores]
"python/ormkit/cli/__init__.py" = ["F401"]  # CLI has planned unused imports

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.0",
    "ty>=0.0.1a7",
    "ruff>=0.8",
    "maturin>=1.7",
]
bench = [
    "rich>=13.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "tortoise-orm>=0.22",
    "sqlalchemy[asyncio]>=2.0",
    "piccolo>=1.0",
    "databases[asyncpg]>=0.9",
    "ormar>=0.20",
    "psycopg[binary]>=3.2",
    "orjson>=3.10",
    "ujson>=5.10",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "pymdown-extensions>=10.0",
]

[tool.uv]
# Rebuild when Rust sources change
cache-keys = [
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "src/**/*.rs" },
]
